@@ -10,6 +10,8 @@ Version 3.1.0 (v3.1.0 RTM)
 		 excluding composites and including decorators and generic type definitions. (fixes #122)
 		-[Core] RegisterCollection overloads that accept a list of assemblies now suppress composite types.
 		 (fixes  #119)
+		-[Core] Improved performance of GetTypesToRegister method and the Register and RegisterCollection
+		 overloads that accept a list of collections.
 
 
 Version 3.0.5 (v3.0.5 RTM) 2015-09-03
